Date	Added
11/20
	* Added an effect_list in docs/ for descriptions, free to add onto that later. [spira]
          - Attempt to find new skill effects.
	* Added "nogo" mapflag to prevent the use of @go on a specified map. [Valaris]
	* Fixed small/big monster spawning crashing (mixed up the merge). [Valaris]
	* Fixed crash with upgrading TXT and having more than 256 accounts. [Valaris]
	* TXT upgrades will convert broken flag to attribute column. [Valaris]
	* Prevent use of emotion packet to display red mute emote. [Valaris]
	* Initialized "day" variable in npc.c. [Valaris]
	* Added @whozeny. Shows list of top 50 online players and their zeny sorted from highest to lowest. [Valaris]
	* Added @happyhappyjoyjoy. Makes all players on server do a random emote. [Valaris]
	* Removed -funroll-loops from compile, thanks to kashy for pointing out the problems caused by this. (Do not re-add!) [Valaris]
	* Skill updates [celest]
	* Added check for max vending_max_value when reading config [kobra_k88]
	* Skill updates [celest]
          - Napalm vulcan, Enchant Deadly Poison, Slow Poison (based on jAthena 1066)
          - Create Deadly Poison, thanks to DracoRPG!
          - Added effect for Meteor Assault
        * Added night_darkness_level to battle_athena.conf. [celest]
          Use this to set 'how dark' it'll become during night time. Use 0 for default,
          or between 1-10. (Yeah, i know lots of people hated the original night! xP)
          Warning: It may cause errors with old exe's!

11/19
	* Re-added check for empty bottle when using aqua benedicta. [Valaris]
        * Fixed skills not showing after using @allskill [celest]

11/18
        * Added a line to @unmute, added @mute. [celest]
          Usage: @mute <time in minutes> <character name>
        * Added save_flag for skill_status_change_start [celest]
        * Fixed muting not being saved when you quit/change characters/log off [celest]